RPXHU-3399 add code

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </head>
 <body>
     <div class="clock">
-        <svg viewBox="0 0 100 100"> <!-- SVG画布，用于绘制时钟 -->
+        <svg style="margin-top: -30%;" viewBox="0 0 100 100"> <!-- SVG画布，用于绘制时钟 -->
             <circle cx="50" cy="50" r="48" fill="none" stroke="#eee" stroke-width="1" /> <!-- 外圆环 -->
             <circle cx="50" cy="50" r="40" fill="none" stroke="#eee" stroke-width="1" /> <!-- 中圆环 -->
             <circle cx="50" cy="50" r="32" fill="none" stroke="#eee" stroke-width="1" /> <!-- 内圆环 -->
