--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
         }
         .clock {
             position: relative; /* 相对定位 */
-            width: 25%; /* 宽度设置 */
-            height: 25%; /* 高度设置 */
+            width: 300px; /* 宽度设置 */
         }
         .digital-time {
             position: absolute; /* 绝对定位 */
